clusters/wrtk8s/headlamp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    external-dns.alpha.kubernetes.io/hostname: headlamp.jgarr.net
    external-dns.alpha.kubernetes.io/target: 10.1.1.152
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - headlamp.jgarr.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 80
