clusters/wrtk8s/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: headlamp.jgarr.net
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - headlamp.jgarr.net
      secretName: headlamp-tls
  rules:
    - host: headlamp.jgarr.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
